# fruits_engine

./: Cargo.toml  timers.json
fruits_alloc_monitor/: Cargo.toml
fruits_alloc_monitor/src/: lib.rs
fruits_app/: Cargo.toml
fruits_app/src/: app.rs  event_loop_handler.rs  lib.rs  render_app.rs  render_app_state.rs  render_app_state_holder.rs  render_state_resource.rs
fruits_ecs/: Cargo.toml
fruits_ecs/src/: data.rs  data_usage.rs  lib.rs  order_graph.rs  schedule_behavior.rs  system.rs  system_data.rs  system_order.rs  system_params.rs  world.rs  world_behavior.rs
fruits_ecs/src/data/: archetypes.rs  resource.rs  world_data.rs
fruits_ecs/src/data/archetypes/: archetype.rs  archetype_layout.rs  component.rs  data_rw_locker.rs  entity.rs  type_info.rs  unique_components_set.rs  world_entities_components.rs
fruits_ecs/src/system_params/: exclusive_world_access.rs  local.rs  query.rs  res.rs  resmut.rs
fruits_ecs_component/: Cargo.toml
fruits_ecs_component/src/: archetype.rs  archetype_layout.rs  component.rs  data_rw_lock.rs  entity.rs  lib.rs  type_info.rs  unsafe_archetype.rs  world_entities_components.rs
fruits_ecs_data/: Cargo.toml
fruits_ecs_data/src/: world_data.rs
fruits_ecs_data_usage/: Cargo.toml
fruits_ecs_data_usage/src/: data_usage.rs  data_usage_entry.rs  lib.rs  per_type_data_usage.rs
fruits_ecs_macros/: Cargo.toml
fruits_ecs_macros/src/: lib.rs
fruits_ecs_resource/: Cargo.toml
fruits_ecs_resource/src/: lib.rs  resource.rs  resources_holder.rs
fruits_ecs_schedule/: Cargo.toml
fruits_ecs_schedule/src/: lib.rs  schedule_behavior.rs  system_order.rs  world_behavior.rs
fruits_ecs_system/: Cargo.toml
fruits_ecs_system/src/: lib.rs  system.rs  system_input.rs  system_param.rs  system_with_marker.rs  system_with_marker_adapter.rs  system_with_marker_impl.rs
fruits_ecs_system_params/: Cargo.toml
fruits_ecs_system_params/src/: entities_info.rs  exclusive_world_access.rs  lib.rs  local.rs  query.rs  res.rs  res_mut.rs
fruits_ecs_system_resource/: Cargo.toml
fruits_ecs_system_resource/src/: lib.rs
fruits_ecs_world/: Cargo.toml
fruits_ecs_world/src/: lib.rs  world.rs  world_builder.rs
fruits_example/: Cargo.toml
fruits_example/fruits_example_boids/: Cargo.toml
fruits_example/fruits_example_boids/src/: main.rs
fruits_example/fruits_example_cubes/: Cargo.toml
fruits_example/fruits_example_cubes/src/: main.rs
fruits_example/src/: main.rs
fruits_gui/: Cargo.toml
fruits_gui/src/: main.rs
fruits_math/: Cargo.toml
fruits_math/src/: lib.rs  matrix.rs  matrix2x2.rs  matrix3x3.rs  matrix4x4.rs  num.rs  quaternion.rs  vec.rs
fruits_modules/: Cargo.toml
fruits_modules/src/: asset.rs  lib.rs  render.rs  transform.rs
fruits_modules/src/render/: assets.rs  components.rs  resources.rs  systems.rs
fruits_modules/src/render/assets/: instance.rs  material.rs  mesh.rs  shader.rs
fruits_modules/src/transform/: components.rs  systems.rs
fruits_prelude/: Cargo.toml
fruits_prelude/src/: lib.rs
fruits_serialization/: Cargo.toml
fruits_serialization/src/: json_deserialization.rs  json_reflection.rs  json_writing.rs  lib.rs  terminal.rs
fruits_utils/: Cargo.toml
fruits_utils/src/: di.rs  index_version_collection.rs  lib.rs  mapped_guard.rs  same_type.rs  thread_pool.rs  typed_map.rs
fruits_window/: Cargo.toml
fruits_window/src/: lib.rs
hlib_test/: Cargo.toml
hlib_test/src/: main.rs  test_json.rs
src/: alloc_monitor.rs  app.rs  ecs.rs  ecs_modules.rs  geometry.rs  main.rs  mapped_locks.rs  math.rs  models.rs  quadtree.rs  render_service.rs  renderer.rs  rendering.rs  same.rs  shader.wgsl  thread_pool.rs  timer.rs  tools.rs  use_case.rs
src/ecs/: behavior.rs  data.rs
src/ecs/behavior/: graph.rs  system.rs  world_behavior.rs
src/ecs/behavior/system/: params.rs
src/ecs/behavior/system/params/: event_writer.rs  exclusive_world_access.rs  query.rs  res.rs  resmut.rs
src/ecs/data/: events.rs  resources.rs  world_data.rs
src/ecs/data/archetypes/: archetype.rs  data_rw_locker.rs  entity.rs  unsafe_archetype.rs  world_entities_components.rs
src/ecs/data/resources/: resource.rs
src/ecs_modules/: render_module.rs  transforms_module.rs
src/geometry/: matrix2x2.rs  matrix3x3.rs  vec.rs
src/math/: matrix2x2.rs  matrix3x3.rs  matrix4x4.rs  num.rs  vec.rs
src/models/: shader.rs
src/rendering/: render_app.rs
src/tools/: di.rs  index_version_collection.rs  typed_map.rs
tools/timers/: index.html  script.js  style.css
