workspace = { members = [ "fruits_alloc_monitor", "fruits_app","fruits_ecs", "fruits_example", "fruits_math", "fruits_modules", "fruits_utils", "fruits_window", "hlib_test"] }
[package]
name = "fruits_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
