[package]
name = "fruits_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fruits_app = { path = "../fruits_app" }
fruits_ecs = { path = "../fruits_ecs" }
fruits_modules = { path = "../fruits_modules" }
fruits_math = { path = "../fruits_math" }