[package]
name = "fruits_modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
fruits_app = { path = "../fruits_app" }
fruits_ecs = { path = "../fruits_ecs" }
fruits_math = { path = "../fruits_math" }
fruits_utils = { path = "../fruits_utils" }
wgpu = "22.0.0"