[package]
name = "fruits_example_cubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fruits_prelude = { path = "../../fruits_prelude" }
fruits_math = { path = "../../fruits_math" }
fruits_modules = { path = "../../fruits_modules" }